--- a/BeatsFrontpage.html
+++ b/BeatsFrontpage.html
@@ -14,6 +14,13 @@
         <body>
             <input type="text" id="SearchBar">
             <button onclick="window.location.href='SearchPage.html'">Search</button>
+
+            <!-- TODO: replace with correct API(s) later -->
+             <label>optional: select a source for the information</label>
+            <select id="info-source" name="info-source">
+                <option value = "API1">API1</option>
+                <option value = "API2">API2</option>
+            </select>
         </body>
 
     </main>
