git pull origin main

--- a/BeatsFrontpage.html
+++ b/BeatsFrontpage.html
@@ -8,12 +8,15 @@
 
     <main>
 
-        <h1> Welcome to pomp'n beats!</h1>
+        <h1> Welcome to Pomp'n Beats!</h1>
         <h2>To get started Type in the song or artist to listen to.</h2>
 
         <body>
             <input type="text" id="SearchBar">
             <button onclick="window.location.href='SearchPage.html'">Search</button>
+                <footer>
+                    <p>&copy; 2025 Pomp'n Beats. All rights reserved.</p>
+                </footer>
         </body>
 
     </main>
