added lyrics styling

--- a/SearchPage.html
+++ b/SearchPage.html
@@ -48,9 +48,9 @@
 
       <section id="lyrics-container">
 
-        <h2>Lyrics:</h2>
+        <label id="lyrics-header">Lyrics:</label>
 
-        <label id="lyrics-text">Loading lyrics...</label>
+        <label id="lyrics-text">Loading Lyrics...</label>
 
       </section>
 
