Added to / fixed search style

--- a/SearchPage.html
+++ b/SearchPage.html
@@ -3,14 +3,16 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Your Song:</title>
+  <title>Song Info</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
   <header>
-    <h1>Song/Artist:  <input type="text" id="SearchBar">
-    <button id="SearchButtom" class="button">Search</button> </h1>
+    <div class="search-container">
+      <h1>Song/Artist:  <input type="text" id="search-input">
+      <button id="search-button" class="button">Search</button> </h1>
+    </div>
 
     <!-- TODO: replace with correct API(s) later -->
     <div class="select-API">
