about page plus updates

--- a/SearchPage.html
+++ b/SearchPage.html
@@ -7,10 +7,17 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 
+
 <body>
   <header>
     <h1>Song/Artist:  <input type="text" id="SearchBar">
     <button id="SearchButtom" class="button">Search</button> </h1>
+     <nav>
+                <ul>
+                    <li><a href="BeatsFrontpage.html">Home</a></li>
+                    <li><a href="AboutPage.html">About</a></li>
+                </ul>
+            </nav>
 
     <!-- TODO: replace with correct API(s) later -->
     <div class="select-API">
