--- a/BeatsFrontpage.html
+++ b/BeatsFrontpage.html
@@ -20,7 +20,7 @@
 
         
              <div class="header-flex">
-                <input type="text" id="SearchBarSong" list="suggestions" placeholder="Search for Artist" class="search-input">
+                <input type="text" id="SearchBarSong" list="suggestions" placeholder="Search for Song" class="search-input">
                 <button onclick="window.location.href='SearchPage.html'" class="search-button">Song</button>
                 <input type="text" id="SearchBarArtist" list="suggestions" placeholder="Search for Artist" class="search-input">
                 <button onclick="window.location.href='SearchPage.html'" class="search-button">Artist</button>
