added previous search container & styled it

--- a/SearchPage.html
+++ b/SearchPage.html
@@ -10,21 +10,22 @@
 
 <body>
   <header>
-<<<<<<< HEAD
-    <h1>Song/Artist:  <input type="text" id="SearchBar">
-    <button id="SearchButtom" class="button">Search</button> </h1>
-     <nav>
-                <ul>
-                    <li><a href="BeatsFrontpage.html">Home</a></li>
-                    <li><a href="AboutPage.html">About</a></li>
-                </ul>
-            </nav>
-=======
     <div class="search-container">
       <h1>Song/Artist:  <input type="text" id="search-input">
       <button id="search-button" class="button">Search</button> </h1>
+
     </div>
->>>>>>> 651d46e7e482fbc1a14a7060b0035e8a021ed736
+
+    <div class="prev-search-container">
+      <details class="prev-searches">
+        <summary>Previous Searches</summary>
+
+        <!-- insert previous searches into here -->
+        <ul id="prev-search-lst">
+        </ul>
+
+      </details>
+    </div>
 
     <!-- TODO: replace with correct API(s) later -->
     <div class="select-API">
