--- a/AboutPage.html
+++ b/AboutPage.html
@@ -35,3 +35,12 @@
             <section>
                 <h2>Contact Us</h2>
                 <p>If you have any questions or feedback, feel free to reach out to us at .</p>
+            </section>
+        </main>
+        <div class="footer-flex">
+            <footer>
+                <p>&copy; 2025 Pomp'n Beats. All rights reserved.</p>
+            </footer>
+        </div>
+    </body>
+</html>
